fix redundent scrollbars on UI

--- a/openmetadata-ui/src/main/resources/ui/src/components/Entity/Task/TaskTab/task-tab.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Entity/Task/TaskTab/task-tab.less
@@ -19,15 +19,17 @@
   }
 }
 
-.task-feed-message {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+.task-feed-message-container {
+  .task-feed-message {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 
-  &:hover {
-    .ant-typography {
-      color: @primary-color;
+    &:hover {
+      .ant-typography {
+        color: @primary-color;
+      }
     }
   }
 }
